--- a/Performance Comparison for Cholesky - 2.ipynb
+++ b/Performance Comparison for Cholesky - 2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dd2bec08",
+   "metadata": {},
+   "source": [
+    "### at.linalg.cholesky -> refers to Scipy implementation with vectorization in Aesara\n",
+    "### at.linalg.cholesky_np -> refers to Numpy Cholesky implementation in Aesara"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "26f4e47b",
@@ -1395,7 +1404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
