--- a/Experimenting with numpy solve.ipynb
+++ b/Experimenting with numpy solve.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "93f3404f",
+   "id": "326a44f4",
    "metadata": {},
    "source": [
     "## numpy.linalg.solve\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198c9438",
+   "id": "fa253f1a",
    "metadata": {},
    "source": [
     "**Here b can be shape of (..., M) or (..., M, K)**"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60190271",
+   "id": "f8f5f7c5",
    "metadata": {},
    "source": [
     "### Case_1 -> b : (…, M,)\n",
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
-   "id": "3dd8f80b",
+   "execution_count": 1,
+   "id": "5c08771a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59144c30",
+   "id": "727ae5cc",
    "metadata": {},
    "source": [
     "#### Preparing data having (b.ndim == a.ndim - 1)"
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
-   "id": "8e0a7bef",
+   "execution_count": 2,
+   "id": "e932fc81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c0ba19",
+   "id": "ed50c768",
    "metadata": {},
    "source": [
     "#### Shape of A & B"
@@ -107,8 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
-   "id": "5dbbe89d",
+   "execution_count": 3,
+   "id": "8569d0d1",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ec7cbf",
+   "id": "136f1629",
    "metadata": {},
    "source": [
     "#### Testing Numpy solve() & Printing output shape"
@@ -150,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
-   "id": "21af5945",
+   "execution_count": 4,
+   "id": "19dbc07c",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf4d71e5",
+   "id": "d5dd01d3",
    "metadata": {},
    "source": [
     "### Case_2 -> b : (…, M, K)\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be1d6225",
+   "id": "a7371603",
    "metadata": {},
    "source": [
     "#### Preparing data having (b.ndim != a.ndim - 1)"
@@ -217,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
-   "id": "6d6b71fb",
+   "execution_count": 5,
+   "id": "9dde4784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dfb9fd3",
+   "id": "e9fec116",
    "metadata": {},
    "source": [
     "#### Shape of A & B"
@@ -263,8 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
-   "id": "1ff63286",
+   "execution_count": 6,
+   "id": "ce2fe2bf",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff5f7cd2",
+   "id": "f3a0ba33",
    "metadata": {},
    "source": [
     "#### Testing Numpy solve() & Printing output shape"
@@ -307,8 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
-   "id": "4263908d",
+   "execution_count": 7,
+   "id": "4c786ccb",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5fdbc8",
+   "id": "028a9977",
    "metadata": {},
    "source": [
     "## Observation"
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4044c1",
+   "id": "3408171e",
    "metadata": {},
    "source": [
     "#### For Case_1 -> b : (…, M,)"
@@ -365,8 +365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
-   "id": "f0d3be1f",
+   "execution_count": 8,
+   "id": "b93f69ff",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "((2, 3, 5, 5), (2, 3, 5))"
       ]
      },
-     "execution_count": 470,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,8 +389,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
-   "id": "5b032e9e",
+   "execution_count": 9,
+   "id": "6dc26b23",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "(2, 3, 5)"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,8 +410,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
-   "id": "2ef7ab8d",
+   "execution_count": 10,
+   "id": "0960b5bf",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 472,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,8 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
-   "id": "5b1ac5cd",
+   "execution_count": 11,
+   "id": "82166a09",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "(2, 3, 5)"
       ]
      },
-     "execution_count": 473,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcc0b09e",
+   "id": "c8fcb697",
    "metadata": {},
    "source": [
     "#### for Case_2 -> b : (…, M, K)"
@@ -463,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
-   "id": "73a85624",
+   "execution_count": 12,
+   "id": "87b1d909",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "((2, 3, 5, 5), (2, 3, 5, 7))"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
-   "id": "4bb4f5df",
+   "execution_count": 13,
+   "id": "aee62bcb",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "(2, 3, 5, 7)"
       ]
      },
-     "execution_count": 475,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,8 +508,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
-   "id": "ad1bb724",
+   "execution_count": 14,
+   "id": "80771562",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 476,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,8 +532,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
-   "id": "c5169781",
+   "execution_count": 15,
+   "id": "0348f50c",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "(2, 3, 5, 7)"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33c7ce83",
+   "id": "0eebff4d",
    "metadata": {},
    "source": [
     "## Verifying formula for all the output shape"
@@ -561,8 +561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
-   "id": "cf401706",
+   "execution_count": 16,
+   "id": "a883d2f9",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
       "13       3        3       (3, 5, 5)       (1, 5, 3)       (3, 5, 3)       (3, 5, 3)      \n",
       "14       3        3       (2, 5, 5)       (1, 5, 5)       (2, 5, 5)       (2, 5, 5)      \n",
       "15       3        3       (10, 5, 5)      (10, 5, 1)      (10, 5, 1)      (10, 5, 1)     \n",
-      "16       4        4       (2, 3, 5, 5)    (2, 3, 5, 7)    (2, 3, 5, 5)    (2, 3, 5, 7)   \n",
+      "16       4        4       (2, 3, 5, 5)    (2, 3, 5, 7)    (2, 3, 5, 7)    (2, 3, 5, 7)   \n",
       "17       4        4       (2, 3, 5, 5)    (5, 3, 5, 2)    Error           Error          \n",
       "18       4        4       (2, 3, 5, 5)    (2, 5, 5, 3)    Error           Error          \n",
       "19       4        4       (2, 3, 5, 5)    (3, 2, 5, 5)    Error           Error          \n"
@@ -602,7 +602,7 @@
     "    a = g[\"a\"+str(i)]\n",
     "    b = g[\"b\"+str(i)]\n",
     "    try:\n",
-    "        x = g[\"x\"+str(i)].shape\n",
+    "        x = np.linalg.solve(a, b).shape\n",
     "    except:\n",
     "        x = \"Error\"\n",
     "        \n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24122b7b",
+   "id": "7de04f0d",
    "metadata": {},
    "source": [
     "#### Other Referance\n",
@@ -653,8 +653,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "04a431ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.full((2,5,5), np.eye(5))\n",
+    "b = np.arange(1*5).reshape(1,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "78f075cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 5, 5), (1, 5))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape, b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "08d1c998",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 5)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.solve(a, b).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a152b2e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 5)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Case - 1\n",
+    "\n",
+    "a_dash = a[...,0,0]   # Remove last 2 dimension, a : (…, M,M)\n",
+    "b_dash = b[...,0]     # Remove last 2 dimension, a : (…, M,K)\n",
+    "x = np.broadcast(a_dash, b_dash)   # broadcast remaining dimensions\n",
+    "x.shape + b.shape[-1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e36404ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1, 5)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Case - 2\n",
+    "\n",
+    "a_dash = a[...,0,0]   # Remove last 2 dimension, a : (…, M,M)\n",
+    "b_dash = b[...,0,0]     # Remove last 2 dimension, a : (…, M,K)\n",
+    "x = np.broadcast(a_dash, b_dash)   # broadcast remaining dimensions\n",
+    "x.shape + b.shape[-2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f2bd783d",
+   "id": "089c5d27",
    "metadata": {},
    "outputs": [],
    "source": []
