--- a/Numpy Solve Example.ipynb
+++ b/Numpy Solve Example.ipynb
@@ -46,9 +46,21 @@
    "execution_count": 3,
    "id": "65a3485f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.,  1.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = at.nlinalg.solve(a, b)"
+    "# Numpy solve\n",
+    "np.linalg.solve(a, b)"
    ]
   },
   {
@@ -71,7 +83,8 @@
     }
    ],
    "source": [
-    "x.eval()"
+    "#Aesara Scipy solve\n",
+    "at.slinalg.solve(a, b).eval()"
    ]
   },
   {
@@ -83,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "array([-1.,  1.])"
       ]
      },
      "execution_count": 5,
@@ -92,7 +105,8 @@
     }
    ],
    "source": [
-    "np.allclose(np.dot(a, x.eval()), b)"
+    "#Aesara Numpy solve\n",
+    "at.nlinalg.solve(a, b).eval()"
    ]
   },
   {
@@ -100,7 +114,7 @@
    "id": "2cac4fe0",
    "metadata": {},
    "source": [
-    "### Int data - Optimization failed"
+    "### Int data"
    ]
   },
   {
@@ -119,15 +133,49 @@
    "execution_count": 7,
    "id": "7e7ae855",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.,  1.])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = at.nlinalg.solve(a, b)"
+    "# Numpy solve\n",
+    "np.linalg.solve(a, b)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "id": "8bafd9c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.,  1.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Aesara Scipy solve\n",
+    "at.slinalg.solve(a, b).eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8353c75c",
    "metadata": {},
    "outputs": [
     {
@@ -247,19 +295,20 @@
        "array([-1.,  1.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.eval()"
+    "#Aesara Numpy solve\n",
+    "at.nlinalg.solve(a, b).eval()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8353c75c",
+   "id": "27c0892e",
    "metadata": {},
    "outputs": [],
    "source": []
