Update Testing Ops with Nd data.ipynb

--- a/Testing Ops with Nd data.ipynb
+++ b/Testing Ops with Nd data.ipynb
@@ -8,7 +8,7 @@
     "## Results\n",
     "Below Ops are not supporting batched data\n",
     "1. at.linalg.det\n",
-    "2. at.linalg.eigh (extra, not used in our project)\n",
+    "2. at.linalg.eigh\n",
     "3. matrix_inverse\n",
     "4. cholesky"
    ]
