--- a/Testing Ops with Nd data.ipynb
+++ b/Testing Ops with Nd data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b862e3b6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "a2c907a5",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "((3, 3), (2, 3, 3))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "3521ba17",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "        [1., 1.]]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,11 +422,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6ac985b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.transpose(d3), at.transpose(d3).eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3b16ef89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 = np.arange(3*3).reshape(3,3)\n",
+    "x2 = np.arange(1*2*3).reshape(3,3)\n",
+    "x3 = np.arange(1*2*3*4).reshape(3,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "168d84d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.transpose(x1), at.transpose(x1).eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c13ba232",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.transpose(x2), at.transpose(x2).eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "69e5d8c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(np.transpose(x2), at.transpose(x2).eval())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4f192edd",
    "metadata": {},
    "source": [
-    "## at.sqrt"
+    "# at.sqrt"
    ]
   },
   {
