--- a/Testing Ops with Nd data-2.ipynb
+++ b/Testing Ops with Nd data-2.ipynb
@@ -10,7 +10,15 @@
     "1. at.linalg.det\n",
     "2. at.linalg.eigh\n",
     "3. matrix_inverse\n",
-    "4. cholesky"
+    "4. cholesky\n",
+    "\n",
+    "\n",
+    "- np.diag -> fails with batched data\n",
+    "- np.matrix.trace -> give sum of every diag in a list but aesara give total sum \n",
+    "- np.fill_diagonal -> inplace operation and doesn't return anything but aesara return the data\n",
+    "\n",
+    "- at.or_ , np.logical_or -> different behavior\n",
+    "- at.and_, np.logical_and"
    ]
   },
   {
